--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 body {
-	background-color:#0e0e0f;
-	font-family:Futura,futura-pt,Arial,sans-serif;
+	--color-text:#fff;
+	--color-bg:#1f174e;
+	--color-bg-2:#151436;
+	--color-bg-3:#000;
+	--color-link:#8596df;
+	--color-link-hover:#723bb7;
+	background:radial-gradient(ellipse at 30% 48%,var(--color-bg) 0,var(--color-bg-2) 45%,var(--color-bg-3) 150%)
 }
-  .contnt .meng {
-    margin-top: 5%;
-    text-align: center;
-    font-size: 30px;
-    font-weight: 600;
-    color:#F8F8FF;
-}
+
 .contnt .messageDetails {
     box-sizing: border-box;
     margin: 3% 8%;
@@ -18,6 +17,13 @@ body {
     border-radius: 8px;
     color: #fff;
     text-align: center;
+}
+.contnt .meng {
+    margin-top: 5%;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    color: 	#F0F8FF;
 }
 .storeup p {
     padding: 10px 0;
@@ -34,7 +40,7 @@ body {
     margin-top: 15px;
 }
 .link span {
-    width: 150px;
+    width: 120px;
     height: 38px;
     border: 1px solid #fff;
     line-height: 40px;
@@ -66,4 +72,36 @@ footer p {
 footer p a {
     color: #fff;
 }
+@media (max-width: 768px) {
+    .storeup p {
+        margin: 0 10% 5%;
+    }
+    .contnt .messageDetails {
+        margin: 8% 5%;
+    }
+    .contnt .meng {
+        margin-top: 10%;
+    }
+    /* body {
+        padding: 20px 0;
+    } */
+}
 
+@media (max-width: 480px) {
+    .storeup p {
+        margin: 7px;
+    }
+    .contnt .messageDetails {
+        margin: 10% 5%;
+    }
+    .messageDetails h1 {
+        font-size: 20px;
+    }
+    .link span {
+        font-size: 14px;
+    }
+    .link a {
+        font-size: 14px;
+    }
+    
+}
