--- a/vip/v/css/stylee.css
+++ b/vip/v/css/stylee.css
@@ -1,5 +1,5 @@
 body{
-    background:https://www.helloimg.com/images/2022/01/31/G8z2F1.png;
+    background-image:url('https://www.helloimg.com/images/2022/01/31/G8z2F1.png');
 }
 a:link {
  text-decoration: none;
